--- a/anokha/css/contact.css
+++ b/anokha/css/contact.css
@@ -84,10 +84,11 @@ div.terms{
  }
 
  .wrapper {
-     padding: 10px 25px;
+     padding: 5px 5px;
      width: 710px;
      border: 1px solid #666;
      box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+	 margin-left: 205px;
 
  }
 
@@ -101,7 +102,7 @@ margin: 30px 0;
  }
 
  .form-row {
-     margin: 12px 100px;
+     margin: 6px 20px;
  }
 
  .form-field {}
