--- a/mini-project/css/faq.css
+++ b/mini-project/css/faq.css
@@ -176,5 +176,12 @@ nav ul li a{
 	padding-top:20px;
 	padding-bottom: 15px;
 }
+.content{
+	padding-left: 95px;
+}
+.content h2{
+	padding-left: 5px;
+}
+
 
 
